# XAUUSD-IA-TRADER

./: .env.example  .gitignore  README.md  XAUUSD-IA-Trader.spec  XAUUSD_MT5_Autonomous_Scalper_Spec.md  build.bat  main.py  pyproject.toml  repomix-output.xml  requirements.txt
configs/: default.yaml
mql5/: XAUUSD_PushBridge.mq5
src/xauusd_ia_trader/: __init__.py  ai.py  broker.py  cli.py  config.py  execution.py  gui.py  indicators.py  models.py  notifier.py  regime.py  risk.py  state_store.py  trader.py
src/xauusd_ia_trader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_execution.py  test_regime.py  test_risk.py  test_state_store.py
