[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-ia-trader"
version = "0.1.0"
description = "Autonomous XAUUSD MT5 scalper with regime adaptation and prop-firm risk controls"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
